// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SVM Escrow dst factory should generate cancelPrivate instruction 1`] = `
{
  "accounts": [
    {
      "isSigner": true,
      "isWritable": true,
      "pubkey": "11111111111111111111111111111112j",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "7on3yxZPgQgehEo4dxTNg2vV3ECWF8T8QVo3JJSGdcHk",
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "FscNvqUJyRy5xqiBPEmC7CnJ6Yw5UaYxLoXmPJgxYw3q",
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "2DDSCFzVdQgu5aFSSksZCfD9CvhXFyFNwxMpeFzzdWjg",
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "A4zgefDchm9xaifwaEUSrNnB3B96XSNeLJh8s9ACR87o",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "11111111111111111111111111111111",
    },
  ],
  "data": "0xe8dbdf29dbecdcbe",
  "programId": "GveV3ToLhvRmeq1Fyg3BMkNetZuG9pZEp4uBGWLrTjve",
}
`;

exports[`SVM Escrow dst factory should generate create escrow instruction 1`] = `
{
  "accounts": [
    {
      "isSigner": true,
      "isWritable": true,
      "pubkey": "CTF3k9CXyCjtCvpPMtG24Bo8r8qaQudTgqaSsp6A64tx",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "7on3yxZPgQgehEo4dxTNg2vV3ECWF8T8QVo3JJSGdcHk",
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "6EdXXGGUP1nb4dzFkaTXXMAreSSDY18USHGBqT5raivs",
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "g2m1CJUtiEZWZsQT6czJCDeJsmAAxc2Rskhdey8wGxP",
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "JBx63bJv329f2DkoXNYuvGzCHsvCTKY3MFNiqYHF52pG",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "ATokenGPvbdGVxr1b2hvZbsiqW5xWH25efTNsLJA8knL",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "SysvarRent111111111111111111111111111111111",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "11111111111111111111111111111111",
    },
  ],
  "data": "0x181ec828051c0777663e58c85e0ac6721b6fe635eda03279e9552866f45938dc00effaac1fd0ac0b6e6b426ba6241e7544d5b6802897f93d68e6ed09cbc816058cf67096ff1494de00ca9a3b00000000e803000000000000b96a60f72dcd59fa0e8378cd0f86bbda0a6dc305d1a228705c9d620ada73b62c0a000000d2000000360100009a0100000a0000006e000000d2000000ddbe7b686400000000",
  "programId": "GveV3ToLhvRmeq1Fyg3BMkNetZuG9pZEp4uBGWLrTjve",
}
`;

exports[`SVM Escrow dst factory should generate withdrawPublic instruction 1`] = `
{
  "accounts": [
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "11111111111111111111111111111112j",
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "1111111111111111111111111111116B",
    },
    {
      "isSigner": true,
      "isWritable": true,
      "pubkey": "1111111111111111111111111111117u",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "Aikth6gKPGZbWbgkZSZumpXpBjTQLq2UUMccZ2CRhtSQ",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "So11111111111111111111111111111111111111112",
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "ENbPaTRr3J1CNuo877HxbM8bTGZRen19qNhSmpYYeoew",
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "HEebJQkKDBXbGwRXPgN5aknqJCWYdG6s3H6Z1wHWz3it",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "GveV3ToLhvRmeq1Fyg3BMkNetZuG9pZEp4uBGWLrTjve",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "ATokenGPvbdGVxr1b2hvZbsiqW5xWH25efTNsLJA8knL",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "11111111111111111111111111111111",
    },
  ],
  "data": "0x9839f0c05223960b0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef",
  "programId": "GveV3ToLhvRmeq1Fyg3BMkNetZuG9pZEp4uBGWLrTjve",
}
`;

exports[`SVM Escrow dst factory should handle native token correctly in withdrawPublic 1`] = `
{
  "accounts": [
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "1111111111111111111111111111113K6",
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "1111111111111111111111111111113eF",
    },
    {
      "isSigner": true,
      "isWritable": true,
      "pubkey": "1111111111111111111111111111112yw",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "2ZWTkvbTmmyz9KWtYuAkcwHEgp4VXbaRWaYC2atJzVYf",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "So11111111111111111111111111111111111111112",
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "EZkxgAXSduM7q3W6J2XxPjg3tgBCZNhWKBQs3xWaEmkB",
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "Dkp9yvxVnPoDSLy7q1VCfnEHbKcm79sRCWgaH4t1uCwd",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "GveV3ToLhvRmeq1Fyg3BMkNetZuG9pZEp4uBGWLrTjve",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "ATokenGPvbdGVxr1b2hvZbsiqW5xWH25efTNsLJA8knL",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "11111111111111111111111111111111",
    },
  ],
  "data": "0x9839f0c05223960bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
  "programId": "GveV3ToLhvRmeq1Fyg3BMkNetZuG9pZEp4uBGWLrTjve",
}
`;
